# MagicCardTrader

./: .coverage  .pre-commit-config.yaml  ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  PRD.md  README.md  analytics_report.csv  collection.csv  debug_cardkingdom.py  debug_mtgstocks.py  debug_mtgstocks_js.py  debug_starcitygames.py  debug_tcgplayer.py  enhanced_report.csv  main.py  migrate_to_database.py  migrate_to_sqlalchemy.py  mtg_trader.db  price_cache.json  price_history.json  pyproject.toml  scryfall_sets.json  task-rules.md  test_all_vendors_bid_offer.py  test_beatthebuylist.py  test_cardkingdom.py  test_cardkingdom_buylist.py  test_cardkingdom_debug.py  test_cash_credit_prices.py  test_ebay_offers.py  test_harlequingames.py  test_mtgmintcard.py  test_mtgmintcard_collection.csv  test_mtgmintcard_integration.py  test_mtgstocks_api.py  test_mtgstocks_bid_offer.py  test_mtgstocks_simple.py  test_nerdragegaming.py  test_real_data.py  (+9 more)
.github/workflows/: ci.yml
mtg_buylist_aggregator/: __init__.py  api_service.py  api_service_sqlalchemy.py  card_manager.py  cli.py  collection_analytics.py  config.py  database.py  database_sqlalchemy.py  enhanced_price_analyzer.py  hot_card_detector.py  models.py  price_analyzer.py  price_cache.py  price_history.py  recommendation_engine.py  set_utils.py  web_dashboard.py  web_research.py
mtg_buylist_aggregator/scrapers/: base_scraper.py  beatthebuylist.py  cardconduit.py  cardkingdom.py  cardmarket.py  cardshark.py  channelfireball.py  (+17 more)
tests/: __init__.py  test_analytics.py  test_database_sqlalchemy.py  test_models.py
(+11 files in other folders)
